<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:id="@+id/LinearLayoutWrap"
    tools:context="com.ioc.roberto.eac1_2016s1.SeleccioActivity">

    <!-- Layount Vertical Select Cicle -->
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayoutSelCicle">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/text_cicle"
            android:id="@+id/tvsCicletxt" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:id="@+id/spinnerCicles" />
    </LinearLayout> <!-- .end Layount Vertical Select Cicle -->

    <!-- Layout Horizontal Select Spinner Curs -->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:id="@+id/linearLayoutSelCurs">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/text_curs"
            android:textSize="18sp"
            android:id="@+id/tvsCurstxt" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spinnerCurs" />
    </LinearLayout> <!-- .end Layout Horizontal Select Spinner Curs -->

    <!-- Layout Horizontal Btn Acceptar - Cancellar -->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:id="@+id/linearLayoutBtnsSel">

        <Button
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight=".5"
            android:text="@string/btn_acceptar"
            android:id="@+id/btnAcceptar" />

        <Button
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight=".5"
            android:text="@string/btn_cancelar"
            android:id="@+id/btnCancelar" />
    </LinearLayout><!-- .end Layout Horizontal Btn Acceptar - Cancellar -->
</LinearLayout>
