<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:id="@+id/LinearLayoutWrap"
    tools:context="com.ioc.roberto.eac1_2016s1.MainActivity">

    <!--Layout vertical dades Personal-->
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayoutDadesPersonals">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/nom_cognom"
            android:id="@+id/tvNom" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/edtNom"
            android:textIsSelectable="false" />
    </LinearLayout> <!--.end Layout vertical dades Personal-->

    <!--Layout Horizontal Opcio1 -->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayoutOp1"
        android:weightSum="1"
        android:baselineAligned="false">

        <!-- Layout Vertical Opcio1 Dades-->
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/linearLayoutOp1Cicle"
            android:layout_weight=".85">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/opcio1"
                android:paddingTop="1dp"
                android:textSize="25sp"
                android:id="@+id/tvOpcio1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/text_cicle"
                android:textSize="17sp"
                android:layout_marginTop="1dp"
                android:id="@+id/tvCicleOp1txt"
                android:textColor="#AAA" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/undefined"
                android:textSize="14sp"
                android:id="@+id/tvCicleOp1res" />

            <!-- Layout Horizontal Curs -->
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:id="@+id/linearLayoutOp1Curs">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/text_curs"
                    android:textSize="17sp"
                    android:id="@+id/tvCursOp1txt"
                    android:textColor="#AAA" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/undefined"
                    android:textSize="14sp"
                    android:paddingLeft="5dp"
                    android:id="@+id/tvCursOp1res" />
            </LinearLayout> <!-- .end Layout Horizontal Curs -->
        </LinearLayout> <!-- end Layout Vertical Opcio1 Dades-->

        <!-- Layout Vertical Opcio1 buttons -->
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/linearLayoutOp1Btns"
            android:layout_weight=".15">

            <ImageButton
                android:layout_width="60dp"
                android:layout_height="55dp"
                android:id="@+id/btnEditOp1"
                android:src="@android:drawable/ic_menu_edit"
                android:contentDescription="@string/descontent_image_edit"
                android:layout_gravity="end" />
            <ImageButton
                android:layout_width="60dp"
                android:layout_height="55dp"
                android:id="@+id/btnDelOp1"
                android:layout_gravity="end"
                android:src="@android:drawable/ic_menu_delete"
                android:contentDescription="@string/descontent_image_del" />
        </LinearLayout> <!-- .end Layout Vertical Opcio1 buttons -->
    </LinearLayout> <!--.end Layout Horizontal Opcio1 -->

    <!-- Layout Horizontal Opcio2 -->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:id="@+id/linearLayoutOp2"
        android:weightSum="1"
        android:baselineAligned="false">

        <!-- Layout Vertical Opcio2 Dades -->
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/linearLayoutOp2Cicle"
            android:layout_weight=".85">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/opcio2"
                android:paddingTop="0dp"
                android:textSize="25sp"
                android:id="@+id/tvOpcio2" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/text_cicle"
                android:textSize="17sp"
                android:id="@+id/tvCicleOp2txt"
                android:layout_marginTop="1dp"
                android:textColor="#AAA" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/undefined"
                android:textSize="14sp"
                android:id="@+id/tvCicleOp2res" />

            <!-- Layout Horizontal Curs -->
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:id="@+id/linearLayoutOp2Curs">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/text_curs"
                    android:textSize="17sp"
                    android:id="@+id/tvCursOp2txt"
                    android:textColor="#AAA" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/undefined"
                    android:textSize="14sp"
                    android:paddingLeft="5dp"
                    android:id="@+id/tvCursOp2res" />
            </LinearLayout> <!-- .end Layout Horizontal Curs -->
        </LinearLayout> <!-- end Layout Vertical Opcio2 Dades -->

        <!-- Layout Vertical Opcio2 buttons -->
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/linearLayoutOp2Btns"
            android:layout_weight=".15">

            <ImageButton
                android:layout_width="60dp"
                android:layout_height="55dp"
                android:id="@+id/btnEditOp2"
                android:layout_gravity="end"
                android:src="@android:drawable/ic_menu_edit"
                android:contentDescription="@string/descontent_image_edit" />
            <ImageButton
                android:layout_width="60dp"
                android:layout_height="55dp"
                android:id="@+id/btnDelOp2"
                android:layout_gravity="end"
                android:src="@android:drawable/ic_menu_delete"
                android:contentDescription="@string/descontent_image_del" />
        </LinearLayout> <!-- .end Layout Vertical Opcio2 buttons -->
    </LinearLayout> <!--.end Layout Horizontal Opcio2 -->

    <!-- Layout Horizontal Btn enviar -->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayoutBtnEnviar">

        <Button
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/btn_enviar"
            android:id="@+id/btnEnviar" />
    </LinearLayout><!-- .end Layout Horizontal Btn enviar -->
</LinearLayout>
